# AI_GripLab

./: README.md  pyproject.toml
problems/FetchPickAndPlace/: no_train_test.py
problems/FetchPickAndPlace/env/: FetchPickAndPlace_env.py
problems/FetchPickAndPlace/ppo_model/: test_ppo.py  train_ppo.py
problems/FetchPickAndPlace/sac_her_model/: test_sac_her.py  train_sac_her.py
problems/FetchReach/: no_train_test.py  test.py  train.py
problems/FetchReach/env/: FetchReach_env.py
